[gd_scene load_steps=3 format=3 uid="uid://dm35u1q824yeu"]

[ext_resource type="Script" uid="uid://chmjp6a54pmif" path="res://Framework/Clases/celda_rook.gd" id="1_ahsln"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_wj570"]
size = Vector2(96, 96)

[node name="Celda_Rook" type="Area2D"]
collision_layer = 9
collision_mask = 9
script = ExtResource("1_ahsln")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_wj570")

[connection signal="input_event" from="." to="." method="_on_input_event"]
[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
